--- a/learn-java-script/scoreboard/index.html
+++ b/learn-java-script/scoreboard/index.html
@@ -12,7 +12,7 @@
                     <button class="scoreButtons" onclick="increaseScore(0,2)">+2</button>
                     <button class="scoreButtons" onclick="increaseScore(0,3)">+3</button>
                 </div><!-- HOME BUTTONS -->
-            </div>
+            </div><!-- HOME -->
             <div class="team"><!-- GUEST -->
                 <h3 class="teamname">GUEST</h3>
                 <p id="guestScore" class="score">0</p>
@@ -21,9 +21,11 @@
                     <button class="scoreButtons" onclick="increaseScore(1,2)">+2</button>
                     <button class="scoreButtons" onclick="increaseScore(1,3)">+3</button>
                 </div><!-- GUEST BUTTONS -->
-            </div>
+            </div><!-- GUEST -->
         </div>
+        <div style="display: flex; justify-content: center;"><button class="resetButton" onclick="resetScores()">Reset Scores</button></div>
         <script src="index.js"></script>
+        
     </body>
 </html>
 <!--  -->
