--- a/learn-java-script/blackjack/index.html
+++ b/learn-java-script/blackjack/index.html
@@ -1,12 +1,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <script src="index.js"></script>
     </head>
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
-        <script src="index.js"></script>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
+        <!-- 1. Create a button that says START GAME. 
+        Make it call a startGame() function when clicked -->
+        <button id="start-btn" onclick="startGame()">START GAME</button>
+        <button id="add-card-btn" onclick="addCard()">ADD CARD</button>
     </body>
 </html>
