Refactor code structure for improved readability and maintainability

--- a/learn-java-script/blackjack/index.html
+++ b/learn-java-script/blackjack/index.html
@@ -11,6 +11,7 @@
         <!-- 1. Create a button that says START GAME. 
         Make it call a startGame() function when clicked -->
         <button id="start-btn" onclick="startGame()">START GAME</button>
-        <button id="add-card-btn" onclick="addCard()">ADD CARD</button>
+        <button id="new-card-btn" onclick="newCard()">NEW CARD</button>
+        <button id="reset-btn" onclick="resetGame()">RESET GAME</button>
     </body>
 </html>
