--- a/learn-java-script/blackjack/index.html
+++ b/learn-java-script/blackjack/index.html
@@ -8,7 +8,7 @@
         <p id="message-el">Want to play a round?</p>
         <p id="cards-el">Cards:</p>
         <p id="sum-el">Sum:</p>
-        <p id="user-data-el">Player:</p>
+        <p id="user-data-el"
         <!-- 1. Create a button that says START GAME. 
         Make it call a startGame() function when clicked -->
         <button id="start-btn" onclick="startGame()">START GAME</button>
