--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>This is a simple portfolio page created using HTML.</p>
+    <p>This is a simple portfolio page created using HTML. Eventually it will look nices than something I could have made in Geocities, but not quite yet.</p>
     <h2>Projects</h2>
-    <div id="projectsDiv">  </div>
+    <div id="projectsDiv"></div>
     <script src="index.js"></script>
 </body>
 </html>
