--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Cut&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>This is a simple portfolio page created using HTML. Eventually it will look nicer than something I could have made in Geocities, but not quite yet.</p>
+    <p>This is a simple portfolio page created using HTML. Eventually it will look nicer than something I could have
+        made in Geocities, but not quite yet.</p>
     <h2>Projects</h2>
     <div id="projectsDiv"></div>
     <script src="index.js"></script>
 </body>
+
 </html>
